objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>dummy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dummy Pricebook Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <description>Account_Division_Materialnummer</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>model_no__c</fullName>
        <description>Formula-field referencing the product</description>
        <formula>Product2.sap_model_no__c</formula>
        <label>Model No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sap_company_code__c</fullName>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Code</valueSetName>
        </valueSet>
    </fields>
</CustomObject>